Fix spacing bug.

--- a/src/partials/_tdcss-subgroup.scss
+++ b/src/partials/_tdcss-subgroup.scss
@@ -1,13 +1,3 @@
 .tdcss-subgroup {
   font-size: 18px;
-
-
-  /* this is a crappy solution to evade the fixed top bar */
-  padding-top: 3.8em;
-
-  padding-bottom: 2em;
-}
-
-.tdcss-subgroup__description {
-  font-size: 18px;
 }
